--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,42 @@
-<ion-header [translucent]="true">
+<ion-header class="ion-no-border">
   <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
+    
+    <ion-title>Buscar...</ion-title>
   </ion-toolbar>
+  
+  <ion-searchbar placeholder="Buscar Producto" 
+                inputmode="text"
+                (ionChange)="onSearchChange($event)"
+                  animated></ion-searchbar>
 </ion-header>
+<ion-content>
+  <ion-list >
+    <ion-item-sliding *ngFor="let producto of productos | filtro: textoBuscar">
+      <ion-item-options side="start">
+        <ion-item-option (click)="editarProducto(producto)">
+          <ion-icon slot="icon-only" name="create-outline"></ion-icon>
+        </ion-item-option>
+        <ion-item-option color="danger" (click)="eliminar(producto)">
+          <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+  
+      <ion-item >        
+        <ion-label>
+          <h3><b>Cód. Barra: </b>{{producto.codigoBarra}}</h3>
+          <p><b>Nombre:</b>{{producto.nombre}}</p>
+          <p><b>Descripción:</b>{{producto.descripcion}}</p>
+          <p><b>Precio:</b> ${{producto.precio}}</p>
+          
+        </ion-label>
+        
+        
+        <!-- <ion-label class="ion-text-end text-small" slot="end">{{especie.autorPrincipal}}</ion-label> -->
+      </ion-item>
+    </ion-item-sliding>
+    
+  </ion-list>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  
+  
 </ion-content>
